       Canon PIXMA i455   (EXPERIMENTAL)
       Canon PIXMA i470D  (EXPERIMENTAL)
       Canon PIXMA i560   (EXPERIMENTAL)
       Canon PIXMA i850   (EXPERIMENTAL) *1
       Canon PIXMA i860   (EXPERIMENTAL) *1
       Canon PIXMA i865   (EXPERIMENTAL) *1
       Canon PIXMA iP2000 (EXPERIMENTAL)
       Canon PIXMA iP4100 (EXPERIMENTAL)
       Canon PIXMA iP5000 (EXPERIMENTAL)
       Canon PIXMA MP600
       Canon PIXMA MP750
       Canon PIXMA MP760
       Canon PIXMA MP770
       Canon PIXMA MP780
       Canon PIXMA MP790
       Canon PIXMA MP970

       *1: for compatibility, the original printers are named with
        "old" appended. These old printers will be deprecated in a
        future release.

  5) Support for the following printers was greatly improved, or
     tested:

       Canon PIXMA MP700
       Canon PIXMA MP710
       Canon PIXMA MP730
       Canon PIXMA MP740
       Canon PIXMA MP950
       Canon PIXMA MP960
       Canon PIXMA MX340
       Canon PIXMA MX350
       Canon PIXMA iP4000
       Canon PIXMA MG5100

  6) CD printing support for the following printers was added:

       Canon PIXMA iP4600
       Canon PIXMA iP4700
       Canon PIXMA iP4800
       Canon PIXMA iP4900
       Canon PIXMA MP980
       Canon PIXMA MP990
       Canon PIXMA MG5200
       Canon PIXMA MG5300
       Canon PIXMA MG6100
       Canon PIXMA MG6200
       Canon PIXMA MG8100
       Canon PIXMA MG8200

  7) The following printer models were either not added, or removed,
     as they cannot currently be supported, even experimentally, owing
     to an as-yet unknown command format or other issues:

       Canon PIXMA i250
       Canon PIXMA i320
       Canon PIXMA i350
       Canon PIXMA iP90
       Canon PIXMA iP90v *1
       Canon PIXMA iP100 *2
       Canon PIXMA iP1000
       Canon PIXMA iP1200
       Canon PIXMA iP1300
       Canon PIXMA iP1500
       Canon PIXMA iP1600
       Canon PIXMA iP1700
       Canon PIXMA iP1800
       Canon PIXMA iP1900